--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Le wagon</title>
 </head>
 <body>
-	<img src="le-wagon.jpg">
-	<h1>Le wagon... Coming soon</h1>
-	<h2> 30/12/2019</h2>
+	<div id="container">
+		<div id="header">
+			<h1>Coming soon...</h1>
+			<img src="le-wagon-bien.png" id="logo">
+		</div>
+		<div id="date">
+			<h2> 30/12/2019</h2>
+		</div>
+	</div>
 </body>
 </html>
